--- a/index.html
+++ b/index.html
@@ -316,10 +316,13 @@
                     {/* Header do Profissional */}
                     <div className="bg-white/95 backdrop-blur-md rounded-2xl p-6 shadow-card mb-8 border border-white/50 slide-up">
                         <div className="flex items-center gap-4 mb-4">
-                            <div className="w-16 h-16 rounded-full bg-stone-200 border-2 border-white shadow-md flex items-center justify-center overflow-hidden shrink-0">
-                                {/* Placeholder para foto do psicólogo */}
-                                <Icon name="user" size={32} className="text-stone-400" />
-                            </div>
+                            <div className="w-16 h-16 rounded-full border-2 border-white shadow-md overflow-hidden shrink-0">
+                                <img 
+                                       src="https://framerusercontent.com/images/UW9PFNbCYQsXEEaCV811zqG1fM.jpeg" 
+                                       alt="Dr. Vinicius Ravagnani"
+                                       className="w-full h-full object-cover"
+                                />
+                                </div>
                             <div>
                                 <h2 className="text-sm font-bold text-primary-700 tracking-wide uppercase mb-0.5">Psicólogo Clínico</h2>
                                 <h1 className="font-serif text-xl font-bold text-stone-800">Vinicius Ravagnani</h1>
