--- a/index.html
+++ b/index.html
@@ -330,15 +330,15 @@
                             </div>
                         </div>
                         <p className="text-stone-600 text-sm leading-relaxed border-t border-stone-100 pt-4 italic font-serif">
-                            "Bem-vindo ao seu espaço seguro. Use esta ferramenta para organizar o caos mental e encontrar novas perspectivas entre nossas sessões."
+                            "Seja Bem-vindo(a). Esta é uma ferramenta segura de reflexão e organização de pensamentos que usaremos entre nossas sessões."
                         </p>
                     </div>
 
                     {/* Área de Ação */}
                     <div className="space-y-6 slide-up" style={{ animationDelay: '0.1s' }}>
                         <div className="text-center mb-8">
-                            <h3 className="font-serif text-3xl font-bold text-stone-800 mb-2">Clareza Mental</h3>
-                            <p className="text-stone-500 font-light">Diário Cognitivo Comportamental</p>
+                            <h3 className="font-serif text-3xl font-bold text-stone-800 mb-2">Diário Cognitivo Comportamental</h3>
+                            <p className="text-stone-500 font-light">Organize seus pensamentos e encontre equilíbrio através da escrita guiada.</p>
                         </div>
 
                         <Button onClick={onStart} className="text-lg py-5 shadow-xl shadow-primary-900/10">
