--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                 id: 'perspective',
                 title: 'O Realista',
                 subtitle: 'Descatastrofização',
-                desc: 'Vamos acalmar o cenário de catástrofe.',
+                desc: 'Vamos pensar em cenáros além da catástrofe.',
                 icon: 'scale',
                 questions: [
                     'Qual é a PIOR coisa que pode acontecer? Você sobreviveria a isso?',
@@ -468,11 +468,11 @@
                 <div className="slide-up flex flex-col h-full">
                     <div className="flex-1">
                         <h2 className="text-3xl font-serif font-bold text-stone-800 mb-3">O que aconteceu?</h2>
-                        <p className="text-stone-500 mb-8 leading-relaxed">Descreva o evento gatilho. Onde você estava? O que estava fazendo? Seja objetivo como uma câmera filmando.</p>
+                        <p className="text-stone-500 mb-8 leading-relaxed">Descreva a situação que te abalou. Como ocorreu?.</p>
                         
                         <textarea 
                             className="w-full h-48 p-6 rounded-xl bg-white border border-stone-200 focus:border-primary-500 focus:ring-4 focus:ring-primary-100 outline-none transition-all text-stone-700 text-lg leading-relaxed shadow-inner resize-none font-serif placeholder:font-sans"
-                            placeholder="Ex: Estava na cozinha preparando o café da manhã quando recebi uma mensagem..."
+                            placeholder="Ex: Eu estava tranquila até que meu chefe me mandou uma mensagem dizendo para eu ir até a sala dele amanhã..."
                             value={text}
                             onChange={e => setText(e.target.value)}
                             autoFocus
@@ -560,7 +560,7 @@
                             <Icon name="message-circle" className="absolute top-4 left-4 text-stone-300" />
                             <textarea 
                                 className="w-full h-40 p-4 pl-12 rounded-xl bg-white border border-stone-200 focus:border-primary-500 focus:ring-4 focus:ring-primary-100 outline-none transition-all text-stone-700 text-lg shadow-sm resize-none font-serif italic"
-                                placeholder='"Eu sou um fracasso...", "Isso vai dar tudo errado..."'
+                                placeholder='"Vou ser Demitido...", "Fiz algo errado...", "Isso vai dar errado..."'
                                 value={thought}
                                 onChange={e => setThought(e.target.value)}
                             ></textarea>
@@ -601,7 +601,7 @@
                 return (
                     <div className="slide-up">
                         <h2 className="text-3xl font-serif font-bold text-stone-800 mb-3">Vamos questionar?</h2>
-                        <p className="text-stone-500 mb-8">Nossos pensamentos nem sempre são fatos. Escolha uma lente para examinar esse pensamento.</p>
+                        <p className="text-stone-500 mb-8">Nossos pensamentos nem sempre são fatos. Escolha um guia de reflexão para examinar esse pensamento.</p>
 
                         <div className="space-y-4">
                             {STRATEGIES.map(st => (
