--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                 id: 'investigator',
                 title: 'O Investigador',
                 subtitle: 'Análise de Evidências',
-                desc: 'Vamos olhar para os fatos frios. O que é real e o que é suposição?',
+                desc: 'Vamos olhar para os fatos. O que é real e o que é suposição?',
                 icon: 'search',
                 questions: [
                     'Quais fatos REAIS comprovam que esse pensamento é 100% verdadeiro?',
