--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
                 const dataStr = JSON.stringify(entries);
                 const encoded = btoa(unescape(encodeURIComponent(dataStr)));
                 navigator.clipboard.writeText(encoded);
-                alert("Dados copiados com segurança. Cole na mensagem para o Dr. Vinicius.");
+                alert("Dados copiados com segurança. Cole na mensagem para o Psi. Vinicius.");
             };
 
             // Router simples
@@ -324,7 +324,7 @@
                             <div className="w-16 h-16 rounded-full border-2 border-white shadow-md overflow-hidden shrink-0">
                                 <img 
                                        src="https://framerusercontent.com/images/UW9PFNbCYQsXEEaCV811zqG1fM.jpeg" 
-                                       alt="Dr. Vinicius Ravagnani"
+                                       alt="Psicólogo. Vinicius Ravagnani"
                                        className="w-full h-full object-cover"
                                 />
                                 </div>
