--- a/index.html
+++ b/index.html
@@ -477,7 +477,7 @@
                         
                         <textarea 
                             className="w-full h-48 p-6 rounded-xl bg-white border border-stone-200 focus:border-primary-500 focus:ring-4 focus:ring-primary-100 outline-none transition-all text-stone-700 text-lg leading-relaxed shadow-inner resize-none font-serif placeholder:font-sans"
-                            placeholder="Ex: Eu estava tranquila até que meu chefe me mandou uma mensagem dizendo para eu ir até a sala dele amanhã..."
+                            placeholder="Ex: Eu estava tranquilo(a) até que meu chefe me mandou uma mensagem dizendo para eu ir até a sala dele amanhã..."
                             value={text}
                             onChange={e => setText(e.target.value)}
                             autoFocus
