--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
                         primary: {
                             50: '#f0f9ff',
                             100: '#e0f2fe',
-                            500: '#0e7490', // Cyan-700 / Teal escuro
+                            500: '#737B57', // Cyan-700 / Teal escuro
                             600: '#0891b2',
-                            700: '#0e7490',
+                            700: '#737B57',
                             800: '#155e75',
                             900: '#164e63',
                         },
@@ -88,7 +88,7 @@
             height: 28px;
             width: 28px;
             border-radius: 50%;
-            background: #0e7490;
+            background: #737B57;
             border: 4px solid #fff;
             box-shadow: 0 4px 8px rgba(0,0,0,0.15);
             margin-top: -12px;
